--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,4 @@ cython_debug/
 #.idea/
 DroneDashboard/currentItemSelected.txt
 DroneDashboard/currentItemSelected.txt
+DroneDashboard/currentItemSelected.txt
